NewArchive/93954e4bbfeab6c7a3a021fd8225db00-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In constructor 'StrongTypedef<T, <template-parameter-1-2> >::StrongTypedef(Args&& ...)':
main.cpp:6:53: error: 'forward' is not a member of 'std'
     explicit StrongTypedef(Args && ...args) : data_(std::forward<Args>(args)...) {}    
                                                     ^
main.cpp:6:70: error: expected primary-expression before '>' token
     explicit StrongTypedef(Args && ...args) : data_(std::forward<Args>(args)...) {}    
                                                                      ^
